methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:8: error: ';' expected but 'return' found.
}return true
 ^